--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="/dashboard" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
+                    <a href="/" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
                     <a href="/"><input class="Submit--From inicio" value="Volver al inicio"></a>
                 </div>
             </form>
