Implementando Tabla de Inventario en Inventario y mas tablas que faltaban

--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -16,7 +16,7 @@
     </header>
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
-            <a href="../Inventario/Inventario.html" class="Link">
+            <a href="/admin/inventario" class="Link">
                 <Li class="List--cont"><img alt="Inventario" src="/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
             <a href="../Estadistica/Estadistica.html" class="Link">
