--- a/src/routes/admin/avisos.ejs
+++ b/src/routes/admin/avisos.ejs
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Avisos</title>
-    <link rel="stylesheet" href="Avisos.css">
-    <link rel="stylesheet" href="../header-sidebar/Estilo.css">
+    <link rel="stylesheet" href="/css/admin/avisos.css">
+    <link rel="stylesheet" href="/css/admin/header.css">
 </head>
 <body>
     <header>
         <div class="Content__header">
-            <img alt="Logo" src="../../../../public/images/Logo/Logo.png">
+            <img alt="Logo" src="/images/Logo/Logo.png">
             <a href="#">Salir</a>
         </div>
     </header>
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
-            <a href="../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+            <a href="/admin/dashboard" class="Link">
+                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/Home.png" title="Home"></Li>
             </a>
-            <a href="../Inventario/Inventario.html" class="Link">
-                <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
+            <a href="/admin/inventario" class="Link">
+                <Li class="List--cont"><img alt="Inventario" src="/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
-            <a href="../Estadistica/Estadistica.html" class="Link">
-                <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
+            <a href="/admin/estadistica" class="Link">
+                <Li class="List--cont"><img alt="Estadistica" src="/images/icons/Estadistica.png" title="Estadistica"></Li>
             </a>
-            <a href="../Proveedor/Proveedor.html" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
+            <a href="/admin/proveedor" class="Link">
+                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/proveedor.png" title="Proveedores"></Li>
             </a>
-            <a href="../Envios/Minorista/Minorista.html" class="Link">
-                <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
+            <a href="/admin/envios" class="Link">
+                <Li class="List--cont"><img alt="Envios/pedidos" src="/images/icons/Envios.png" title="Envios/pedidos"></Li>
             </a>
-            <a href="Avisos.html" class="Link">
-                <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
+            <a href="/admin/avisos" class="Link">
+                <Li class="List--cont"><img alt="Avisos" src="/images/icons/Reporte.png" title="Avisos"></Li>
             </a>
         </ul>
     </nav>
@@ -44,7 +44,7 @@
                         <span>Nuevo reporte</span>
                         <div class="Input">
                             <input type="text" placeholder="Escribir el reporte" required>
-                            <img src="../../../../public/images/icons/Cancel.png" alt="icon">
+                            <img src="/images/icons/Cancel.png" alt="icon">
                         </div>
                     </div>
                     <div class="Tipo--aviso">
