--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -19,16 +19,16 @@
             <a href="/admin/inventario" class="Link">
                 <Li class="List--cont"><img alt="Inventario" src="/images/icons/Inventario.png" title="Inventario"></Li>
             </a>
-            <a href="../Estadistica/Estadistica.html" class="Link">
+            <a href="/admin/estadistica" class="Link">
                 <Li class="List--cont"><img alt="Estadistica" src="/images/icons/Estadistica.png" title="Estadistica"></Li>
             </a>
-            <a href="../Proveedor/Proveedor.html" class="Link">
+            <a href="/admin/proveedor" class="Link">
                 <Li class="List--cont"><img alt="Proveedores" src="/images/icons/proveedor.png" title="Proveedores"></Li>
             </a>
-            <a href="../Envios/Minorista/Minorista.html" class="Link">
+            <a href="/admin/envios" class="Link">
                 <Li class="List--cont"><img alt="Envios/pedidos" src="/images/icons/Envios.png" title="Envios/pedidos"></Li>
             </a>
-            <a href="../Avisos/Avisos.html" class="Link">
+            <a href="/admin/avisos" class="Link">
                 <Li class="List--cont"><img alt="Avisos" src="/images/icons/Reporte.png" title="Avisos"></Li>
             </a>
         </ul>
