Se coloca un boton para quitar la ventana modal y se arreglo la estructura de js

--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -135,6 +135,7 @@
             </table>
         </section>
         <dialog id="dialog--1">
+            <span id="Cerrar">X</span>
             <h2>Agregar Producto</h2>
             <form>
                 <div class="input--Container">
@@ -193,6 +194,7 @@
             </form>
         </dialog>
         <dialog id="dialog--2" class="Eliminar--producto">
+            <span id="Cerrar--venta">X</span>
             <h2>Eliminar Producto</h2>
             <form>
                 <div>
@@ -203,6 +205,7 @@
             </form>
         </dialog>
         <dialog id="dialog--3">
+            <span id="Cerrar--ventana">X</span>
             <h2>Modificar Producto</h2>
             <form>
                 <div class="input--Container">
