--- a/src/layouts/Gerente/Inventario/Inventario.css
+++ b/src/layouts/Gerente/Inventario/Inventario.css
@@ -156,6 +156,21 @@ dialog[open]{
       opacity: 1;
     }
   }
+dialog span{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    font-size: 1.3em;
+    border: 1px solid #000;
+    padding: 5px;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 500ms 0.1s;
+}
+dialog span:hover{
+    background-color: var(--HoverColor);
+}
 dialog h2{
     font-size: 2em;
     letter-spacing: 1px;
@@ -245,7 +260,6 @@ dialog form button:hover{
 .Eliminar--producto{
     width: 450px;
     height: 145px;
-    text-align: center;
 }
 .Eliminar--producto form div{
     justify-content: center;
