--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -131,6 +131,19 @@
                         <td>40$</td>
                         <td>2,5</td>
                     </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Vulcana</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
