--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -114,6 +114,16 @@
                             <td>20/03/2024</td>
                             <td>Jose</td>
                         </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Carlos</td>
+                            <td>0412-3546112</td>
+                            <td>V-284567681</td>
+                            <td>Naguanagua</td>
+                            <td>12/03/2024</td>
+                            <td>20/03/2024</td>
+                            <td>Jose</td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
