--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -97,6 +97,46 @@
                         <td>3</td>
                         <td>Factura</td>
                     </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>4</td>
+                        <td>Naguanagua</td>
+                        <td>14/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>3</td>
+                        <td>Factura</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>4</td>
+                        <td>Naguanagua</td>
+                        <td>14/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>3</td>
+                        <td>Factura</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>5</td>
+                        <td>Naguanagua</td>
+                        <td>14/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>3</td>
+                        <td>Factura</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>6</td>
+                        <td>Naguanagua</td>
+                        <td>14/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>3</td>
+                        <td>Factura</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
