--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -88,6 +88,31 @@
                             <td>Stock</td>
                             <td>24/09/2024</td>
                         </tr>
+                        <tr>
+                            <td>Lai no trajo el informe</td>
+                            <td>Stock</td>
+                            <td>24/09/2024</td>
+                        </tr>
+                        <tr>
+                            <td>Lai no trajo el informe</td>
+                            <td>Stock</td>
+                            <td>24/09/2024</td>
+                        </tr>
+                        <tr>
+                            <td>Lai no trajo el informe</td>
+                            <td>Stock</td>
+                            <td>24/09/2024</td>
+                        </tr>
+                        <tr>
+                            <td>Lai no trajo el informe</td>
+                            <td>Stock</td>
+                            <td>24/09/2024</td>
+                        </tr>
+                        <tr>
+                            <td>Lai no trajo el informe</td>
+                            <td>Stock</td>
+                            <td>24/09/2024</td>
+                        </tr>
                     </tbody>
                 </table>
             </article>
