Arreglando Proveedores => Vinculando con DB y Intento Registro

--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -42,19 +42,19 @@
                 <h1>Vista de proveedor</h1>
                 <article class="Nombre--proveedor">
                     <span>Nombre del Proveedor</span>
-                    <h3>Santa Teresa</h3>
+                    <h3><%= proveedor[0].nombre %></h3>
                 </article>
                 <article class="Tlf--proveedor">
                     <span>Telefono del proveedor</span>
-                    <h3>0414-4204521</h3>
+                    <h3><%= proveedor[0].telefono %></h3>
                 </article>
                 <article class="Ubi--proveedor">
                     <span>Ubicación</span>
-                    <h3>Trigal</h3>
+                    <h3><%= proveedor[0].ubicacion %></h3>
                 </article>
                 <article class="Rif--proveedor">
                     <span>RIF</span>
-                    <h3>V-316088291</h3>
+                    <h3><%= proveedor[0].rif %></h3>
                 </article>
                 <article class="Icon--proveedor">
                     <img src="/images/icons/Añadir--white.png" alt="Agregar" title="Agregar proveedor">
@@ -80,40 +80,20 @@
                             <th>Ubicación</th>
                             <th>Fecha de Compra</th>
                             <th>Fecha de Entrega</th>
-                            <th>USER</th>
-                        </tr>
+                                                </tr>
                     </thead>
                     <tbody>
+                        <% proveedor.forEach(proveedor => { %>
                         <tr>
-                            <td>1</td>
-                            <td>Carlos</td>
-                            <td>0412-3546112</td>
-                            <td>V-284567681</td>
-                            <td>Naguanagua</td>
-                            <td>12/03/2024</td>
-                            <td>20/03/2024</td>
-                            <td>Jose</td>
+                            <td><%= proveedor.id %></td>
+                            <td><%= proveedor.nombre %></td>
+                            <td><%= proveedor.telefono %></td>
+                            <td><%= proveedor.rif %></td>
+                            <td><%= proveedor.ubicacion %></td>
+                            <td><%= proveedor.fecha_compra.toLocaleDateString() %></td>
+                            <td><%= proveedor.fecha_entrega.toLocaleDateString() %></td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Carlos</td>
-                            <td>0412-3546112</td>
-                            <td>V-284567681</td>
-                            <td>Naguanagua</td>
-                            <td>12/03/2024</td>
-                            <td>20/03/2024</td>
-                            <td>Jose</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Carlos</td>
-                            <td>0412-3546112</td>
-                            <td>V-284567681</td>
-                            <td>Naguanagua</td>
-                            <td>12/03/2024</td>
-                            <td>20/03/2024</td>
-                            <td>Jose</td>
-                        </tr>
+                        <% }) %>
                     </tbody>
                 </table>
             </section>
