--- a/src/routes/auth/register.ejs
+++ b/src/routes/auth/register.ejs
@@ -13,7 +13,7 @@
                 <img src="/images/Logo/Logo.png" alt="Logo">
                 <h2>Bienvenido a Drinkers</h2>
             </div>
-            <form class="Form__page" action="">
+            <form class="Form__page">
                 <div class="Input--container">
                     <label for="Nombre">Nombre</label>
                     <div class="Container">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="Buttons">
-                    <a href="/" id="link"><input class="Submit--From"  value="Crear Cuenta"></a>
+                    <a id="link"><input type="submit" class="Submit--From"  value="Crear Cuenta"></a>
                     <a href="/"><input class="Submit--From inicio" value="Volver al inicio"></a>
                 </div>
             </form>
